--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -153,7 +153,7 @@
     .mainImageTextBox1 {
         
         position: absolute;
-        top: 18%; /* 모바일에서 더 상단에 위치 */
+        top: 25%; /* 모바일에서 더 상단에 위치 */
         left: 50%;
         transform: translateX(-50%); /* 중앙 정렬 */
         color: #FFFFFF;
@@ -166,7 +166,7 @@
     .mainImageTextSub1 {
         font-family: 'SUIT-Regular';    
         color: #ffffff; /* 회색 */
-        font-size: 2vw; /* 모바일에서 글자 크기 줄임 */
+        font-size: 3vw; /* 모바일에서 글자 크기 줄임 */
         line-height: 1.4;
         margin-bottom: 5vw; /* 모바일에서 여백 조금 줄임 */
         animation: slideUp 1s ease-out forwards; /* 텍스트 슬라이드 애니메이션 */
@@ -174,7 +174,7 @@
 
     .mainImageText1 {
         font-family: 'GongGothicMedium';
-        font-size: 3vw; /* 모바일에서 더 작은 글자 크기 */
+        font-size: 4vw; /* 모바일에서 더 작은 글자 크기 */
         font-weight: bold;
         line-height: 0.5; /* 텍스트 간격 조정 */
         color: #ffffff; /* 파랑 색상 */
@@ -182,7 +182,7 @@
     }
 
     .mainImageTitleBox1 {
-        font-size: 40px; /* 텍스트2 가장 큰 크기 */
+        font-size: 6vw; /* 텍스트2 가장 큰 크기 */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -191,15 +191,15 @@
     }
 
     .greyText1 {
-        font-size: 30px; /* 텍스트2 가장 큰 크기 */
+        font-size: 4.5vw; /* 텍스트2 가장 큰 크기 */
         font-family: 'Paperlogy-8ExtraBold';
-        color: #fbf70a; /* 회색 텍스트 */
+        color: #fbf70a; /* 회색 텍스트 */   
         
     }
 
     .grandOpenText1 {
         font-family: 'Paperlogy-8ExtraBold';
-        font-size: 25px;
+        font-size: 4vw;
         font-weight: bold;
         color: #eef10b; /* 강조 색상 */
         text-align: center;
@@ -208,11 +208,11 @@
 
       .grandOpenText3 {
         font-family: 'Paperlogy-8ExtraBold';
-        font-size: 30px;
+        font-size: 5vw;
         font-weight: bold;
         color: #FFFFFF; /* 강조 색상 */
         text-align: center;
-        margin-top: 40px;
+        margin-top: 20px;
       }
 
 
@@ -585,12 +585,12 @@
         
         position: relative; /* 상대적 위치 지정 */
         width: 100%;
-        height: 50%;
+        height: 90%;
         overflow: hidden; /* 이미지를 잘라내지 않도록 */
 
         .mainImage {
             width: 100vw;
-            height: auto;
+            height: 90vh;
             object-fit: cover; /* 이미지 비율 유지하면서 가득 채우기 */
             filter: brightness(0.8) contrast(1.2); /* 이미지에 어두운 필터 적용, 대비 강조 */
         }
