--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -778,7 +778,7 @@
         height: 100%;
 
         img {
-            width: 34vw;
+            width: 15vw;
     
         }
 
@@ -796,7 +796,7 @@
             .btn {
                 margin-top: 3vw;
                 padding: 2.2vw 3.5vw;
-                background-color: #6e5e55;
+                background-color: #2d3c49;
                 border-radius: 10vw;
                 color: #FFFFFF;
                 font-size: 3.2vw;
