--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -163,7 +163,7 @@
     
     /* 헤더가 gif 배너 바로 아래에 위치하도록 top: 12.1vh; */
     position: fixed;
-    top: 4vh;
+    top: 8.3vw;
     left: 0;
     padding: 5vw 0 4vw 0;
     width: 100%;
