--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -732,6 +732,7 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+        height: 75vw;
 
         padding: 10vw 0 0 7vw;
 
@@ -761,7 +762,7 @@
         }
 
         .text4 {
-            margin: 15vw 0 17vw 3vw;
+            margin: 10vw 0 0 1vw;
             font-size: 3vw;
             color: #241400;
 
