feat : 클릭안됨 수정정

--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -762,13 +762,19 @@
         }
 
         .text4 {
-            margin: 10vw 0 0 1vw;
+            margin: 10vw 0 17vw 4vw;
             font-size: 3vw;
             color: #241400;
-
+            z-index: 100;
+      
             a {
-                text-decoration: none;
-                color: inherit;
+              text-decoration: none; /* 밑줄 제거 */
+              color: #000000; /* 검정색으로 변경 */
+              font-size: 3vw; /* 글자 크기 키우기 */
+              font-weight: bold; /* 가독성을 위해 굵게 설정 */
+              padding: 0; /* 내부 여백 제거 */
+              display: inline; /* 버튼처럼 보이지 않도록 inline 설정 */
+            
             }
         }
 
