--- a/src/components/MobilePopup/MobilePopup.module.scss
+++ b/src/components/MobilePopup/MobilePopup.module.scss
@@ -1,18 +1,18 @@
-.backgroundContainer {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    //background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+// .backgroundContainer {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     //background-color: rgba(0, 0, 0, 0.5);
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
 
-    @media (max-width: 900px) {
-        //background-color: rgba(0, 0, 0, 0.3);
-    }
-}
+//     @media (max-width: 900px) {
+//         //background-color: rgba(0, 0, 0, 0.3);
+//     }
+// }
 
 .contentContainer {
     display: flex;
